[tool.poetry]
name = "tube-traffic-vis"
version = "0.1.0"
description = "Interactive web application for visualizing traffic data on the London Underground, featuring maps and statistical insights on station activity from 2017-2022."
authors = ["Vetrichelvan <pythonhubdev@gmail.com>"]
readme = "README.md"
packages = [
    { include = "app" }
]

[tool.poetry.dependencies]
python = "^3.12"
dash = "^2.16.1"
pandas = "^2.2.2"
dash-bootstrap-components = "^1.6.0"
pydantic = "^2.7.1"
pydantic-settings = "^2.2.1"
openpyxl = "^3.1.2"


[tool.poetry.group.dev.dependencies]
ruff = "^0.4.1"
isort = "^5.13.2"
black = { extras = ["d"], version = "^24.4.0" }
pytest = "^8.1.1"
pytest-cov = "^5.0.0"
mypy = "^1.9.0"
pre-commit = "^3.7.0"

[tool.black]
line-length = 120
preview = true

[tool.isort]
profile = "black"
multi_line_output = 3
src_paths = ["data_integration_service", ]

[tool.mypy]
strict = true
ignore_missing_imports = true
allow_subclassing_any = true
allow_untyped_calls = true
pretty = true
show_error_codes = true
implicit_reexport = true
allow_untyped_decorators = true
warn_unused_ignores = false
warn_return_any = false
namespace_packages = true

[tool.ruff]
src = ["."]
target-version = "py311"
fix = true
output-format = "full"
line-length = 120

[tool.lint.flake8-quotes]
inline-quotes = "double"
multiline-quotes = "double"
docstring-quotes = "double"

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.flake8-type-checking]
strict = true

[tool.ruff.lint.isort]
combine-as-imports = true

[pytest]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
